--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,5 +1,26 @@
 version: '3.3'
+
+volumes:
+  pg_data:
+  static:
+  media:
+
 services:
+  db:
+    image: postgres:13
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+
+  backend:
+    build: 
+      context: ../backend/
+      dockerfile: Dockerfile
+    env_file: ../.env
+    volumes:
+    - static:/backend_static
+    - media:/media/recipes/images/
+    depends_on:
+    - db
 
   frontend:
     build:
@@ -7,6 +28,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+
   nginx:
     image: nginx:1.19.3
     ports:
