--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 drf-extra-fields==3.5.0
 filetype==1.2.0
+gunicorn==20.1.0
 idna==3.4
 isort==5.12.0
 itypes==1.2.0
@@ -21,6 +22,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 oauthlib==3.2.2
 Pillow==10.0.0
+progress==1.6
 psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.7.0
