--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -10,11 +10,12 @@ services:
     image: postgres:13
     volumes:
       - pg_data:/var/lib/postgresql/data
+    env_file: ../.env
 
   backend:
     build: 
       context: ../backend/
-      dockerfile: Dockerfile
+      dockerfile: foodgram/Dockerfile
     env_file: ../.env
     volumes:
     - static:/backend_static
@@ -37,3 +38,7 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static:/var/html/static/
+      - media:/var/html/media/
+    depends_on:
+      - db
