--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,23 @@
 server {
     listen 80;
+    server_name 127.0.0.1;
+    server_tokens off;
+
+    location /media/ {
+        root /var/html/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
+    }
+    location /api/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/api/;
+    }
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/admin/;
     }
     location / {
         root /usr/share/nginx/html;
