--- a/infra/docker-compose.production.yml
+++ b/infra/docker-compose.production.yml
@@ -13,7 +13,7 @@ services:
       - pg_data_production:/var/lib/postgresql/data
 
   backend:
-    image: nbkrtm/backend
+    image: nbkrtm/foodgram_backend
     env_file: .env
     volumes:
     - static_volume_production:/backend_static
