--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -17,7 +17,7 @@ services:
     env_file: .env
     volumes:
     - static_volume_production:/backend_static
-    - media_production:/media/recipes/images/
+    - media_production:app/media/recipes/images/
     depends_on:
     - db
 
@@ -30,10 +30,8 @@ services:
   gateway:
     image: nginx:1.19.3
     ports:
-      - "80:80"
+      - 8000:80
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
       - static_volume_production:/var/html/static/
       - media_production:/var/html/media/
