--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,36 @@
-version: '3.3'
+version: '3'
 
 volumes:
   pg_data:
   static:
   media:
-
 services:
   db:
     image: postgres:13
+    env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
-    env_file: ../.env
-
   backend:
-    build: 
-      context: ../backend/
-      dockerfile: foodgram/Dockerfile
-    env_file: ../.env
-    volumes:
-    - static:/backend_static
-    - media:/media/recipes/images/
+    build: ./backend/
+    env_file: .env
     depends_on:
-    - db
-
-  frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+      - db
     volumes:
-      - ../frontend/:/app/result_build/
-
+      - static:/backend_static
+      - media:/media/recipes/images/
+  frontend:
+    env_file: .env
+    build: ./frontend/
+    command: cp -r /app/build/. /frontend_static/
+    volumes:
+      - static:/frontend_static/
   nginx:
     image: nginx:1.19.3
     ports:
-      - "80:80"
+      - 8000:80
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static:/var/html/static/
-      - media:/var/html/media/
+      - static:/staticfiles
+      - media:/media/recipes/images/
     depends_on:
-      - db
+      - backend
