--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,12 @@
 server {
     listen 80;
+    index index.html
     server_name 127.0.0.1;
     server_tokens off;
 
     location /media/ {
-        root /var/html/;
+        proxy_set_header Host $host;
+        alias /media/;
     }
 
     location /api/docs/ {
@@ -20,13 +22,9 @@ server {
         proxy_pass http://backend:8000/admin/;
     }
     location / {
-        root /usr/share/nginx/html;
-        index  index.html index.htm;
+        proxy_set_header Host $host;
+        alias /static/;
         try_files $uri /index.html;
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Proto $scheme;
       }
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
