--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,34 +1,35 @@
 server {
     listen 80;
-    index index.html
+    index index.html;
     server_name 127.0.0.1;
     server_tokens off;
 
     location /media/ {
-        proxy_set_header Host $host;
         alias /media/;
     }
 
     location /api/docs/ {
         root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
+        try_files $uri /redoc.html;
     }
+
     location /api/ {
         proxy_set_header Host $http_host;
         proxy_pass http://backend:8000/api/;
     }
+
     location /admin/ {
         proxy_set_header Host $http_host;
         proxy_pass http://backend:8000/admin/;
     }
-    location / {
-        proxy_set_header Host $host;
-        alias /static/;
-        try_files $uri /index.html;
-      }
-      error_page   500 502 503 504  /50x.html;
-      location = /50x.html {
-        root   /var/html/frontend/;
-      }
 
+    location / {
+        alias /media/;
+        try_files $uri $uri/ /index.html;
+    }
+
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /var/html/frontend/;
+    }
 }
