--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,35 +1,28 @@
 server {
     listen 80;
     index index.html;
-    server_name 127.0.0.1;
     server_tokens off;
-
-    location /media/ {
-        alias /media/;
-    }
-
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri /redoc.html;
-    }
+    client_max_body_size 20M;
 
     location /api/ {
         proxy_set_header Host $http_host;
         proxy_pass http://backend:8000/api/;
     }
-
     location /admin/ {
         proxy_set_header Host $http_host;
         proxy_pass http://backend:8000/admin/;
     }
-
-    location / {
-        alias /media/;
-        try_files $uri $uri/ /index.html;
+    location /api/docs/ {
+        root /usr/share/nginx/html;
+        try_files $uri /redoc.html;
     }
-
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /var/html/frontend/;
+    location /media/ {
+        proxy_set_header Host $http_host;
+        alias /media/;
+    }
+    location / {
+        proxy_set_header Host $http_host;
+        alias /static/;
+        try_files $uri $uri/ /index.html;
     }
 }
