--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,14 @@ volumes:
   pg_data:
   static:
   media:
+
 services:
   db:
     image: postgres:13
     env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
+
   backend:
     build: ./backend/
     env_file: .env
@@ -18,14 +20,17 @@ services:
     volumes:
       - static:/backend_static
       - media:/media/
+
   frontend:
     env_file: .env
     build: ./frontend/
     command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static:/frontend_static/
+      - static:/frontend_static
+
   nginx:
-    image: nginx:1.19.3
+    build: ./nginx/
+    env_file: .env
     ports:
       - 8000:80
     volumes:
