--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,7 +22,8 @@ server {
     }
     location / {
         proxy_set_header Host $http_host;
-        alias /static/;
+        alias /staticfiles/;
         try_files $uri $uri/ /index.html;
     }
 }
+ 
