--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,4 +1,4 @@
-version: '3.3'
+version: '3'
 
 volumes:
   pg_data_production:
@@ -7,7 +7,7 @@ volumes:
 
 services:
   db:
-    image: postgres:13
+    image: postgres:13.10
     env_file: .env
     volumes:
       - pg_data_production:/var/lib/postgresql/data
@@ -17,7 +17,7 @@ services:
     env_file: .env
     volumes:
     - static_volume_production:/backend_static
-    - media_production:app/media/
+    - media_production:app/media/recipes/images/
     depends_on:
     - db
 
@@ -27,14 +27,14 @@ services:
     volumes:
       - static_volume_production:/frontend_static
 
-  gateway:
+  nginx:
     image: nbkrtm/foodgram_gateway
     ports:
       - 8000:80
     volumes:
       - ../docs/:/usr/share/nginx/html/api/docs/
       - static_volume_production:/static/
-      - media_production:/media/
+      - media_production:/media/recipes/images/
     depends_on:
       - backend
     restart: always
