--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,12 @@ volumes:
   pg_data:
   static:
   media:
-
 services:
   db:
     image: postgres:13
     env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
-
   backend:
     build: ./backend/
     env_file: .env
@@ -20,14 +18,12 @@ services:
     volumes:
       - static:/backend_static
       - media:/media/
-
   frontend:
     env_file: .env
     build: ./frontend/
     command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static:/frontend_static
-
+      - static:/frontend_static/
   nginx:
     build: ./nginx/
     env_file: .env
