--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,7 @@ services:
     volumes:
       - static:/frontend_static/
   nginx:
-    build: ./nginx/
-    env_file: .env
+    image: nginx:1.19.3
     ports:
       - 8000:80
     volumes:
